# afri-trust-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  afritrust.db-shm  afritrust.db-wal  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: api_keys.py  applicants.py  assistant.py  audit_logs.py  auth.py  consent.py  dashboard.py  kyc_data.py  org.py  sdk_demo.py  tier_profiles.py  verification_live.py  verifications.py  webhooks.py  workflows.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py  types.py
app/models/: __init__.py  applicant.py  assistant_session.py  audit.py  biometric.py  consent.py  document.py  organization.py  tier_profile.py  verification.py  webhook.py  workflow.py
app/schemas/: api_key.py  applicant.py  assistant.py  assistant_sessions.py  audit.py  auth.py  common.py  consent.py  kyc_data.py  org.py  tier_profile.py  verification.py  webhook.py  workflow.py
app/sdk/: afritrust.js  demo.html
app/services/: audit_service.py  biometric_service.py  consent_service.py  document_processor.py  document_type_validation.py  mail.py  orchestrator.py  org_settings.py  vision_openrouter.py  webhook_dispatcher.py  workflow_short_code.py
app/storage/: base.py  local.py
docs/: ARCHITECTURE.md
migrations/: alembic.ini  env.py
migrations/versions/: 2d6d9822e92d_initial_schema.py
nginx/: Dockerfile
nginx/conf.d/: api.conf
postman/: AfriTrust_API.postman_collection.json
tests/: conftest.py  test_auth.py  test_tier_profiles.py  test_verification_live_ws.py  test_verifications.py  test_workflows.py
uploads/54c635f4-1448-431f-b7b0-86e035607669/19cefdb0-256c-44bf-a8f9-e491bcacf944/liveness/: 09bb03af-12d5-4555-a56c-9f2c5d240e4a
