[project]
name = "afri-trust-backend"
version = "0.1.0"
description = "AfriTrust backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "sqlalchemy[asyncio]",
    "alembic",
    "aiosqlite",
    "pydantic-settings",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "python-multipart",
    "httpx",
    "email-validator",
    "pytesseract",
    "Pillow",
    "opencv-python-headless",
]

[tool.pyright]
include = ["app"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
