[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afritrust-backend"
version = "0.1.0"
description = "AfriTrust KYC API"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pyright]
include = ["app"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
