[project]
name = "afri-trust-backend"
version = "0.1.0"
description = "AfriTrust backend and KYC API"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "sqlalchemy[asyncio]",
    "alembic",
    "aiosqlite",
    "pydantic-settings",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "python-multipart",
    "httpx",
    "email-validator",
    "pytesseract",
    "Pillow",
    "opencv-python-headless",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pyright]
include = ["app"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
